--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,17 @@ h1{
 }
 
 p{
-    color: rgb(4, 4, 70);
+    color: lightblue;
 }
 
 td{
-    color: rgb(4, 4, 70);
+    color: lightblue;
 }
 
 body{
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#one{
+    color:rgb(4, 4, 70);
 }
